startstream start stop and finish service

--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "test": "set NODE_OPTIONS=--experimental-vm-modules && npx jest --runInBand --no-cache",
     "test:watch": "set NODE_OPTIONS=--experimental-vm-modules && npx jest --runInBand --no-cache --watchAll",
     "test:coverage": "set NODE_OPTIONS=--experimental-vm-modules && npx jest --runInBand --no-cache --coverage tests/unit",
-    "live-reload:docker": "docker-compose up --build live-reload"
+    "test:e2e": "set NODE_OPTIONS=--experimental-vm-modules && npx jest --runInBand --no-cache tests/e2e",
+    "live-reload:docker": "docker-compose up --build live-reload",
+    "test:docker": "docker-compose up --build test",
+    "test:watch:docker": "docker-compose up --build test-watch",
+    "test:coverage:docker": "docker-compose up --build test-coverage"
   },
   "engines": {
     "node": "16.x"
@@ -19,7 +23,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "portfinder": "^1.0.28",
+    "supertest": "^6.2.2"
   },
   "dependencies": {
     "@types/jest": "^27.4.1",
